--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ button:hover {
   background-color: #3e8e41;
 }
 
-.button:active {
+button:active {
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
