--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ input {
 
   font-size: 16px;
   text-transform: uppercase;
+  font-weight: 600;
+  color: #1d461e;
 }
 
 .day {
@@ -66,6 +68,8 @@ input {
   font-size: 20px;
   font-weight: 600;
   padding: 5px;
+  padding-right: 20%;
+  text-align: right;
 }
 
 .target {
